fixed buttos spacing

--- a/src/styles/global/_button.scss
+++ b/src/styles/global/_button.scss
@@ -2,6 +2,9 @@
   border: solid 1px var(--blue-2);
   background-color: rgba(255, 2552, 255, 0.85);
   color: var(--blue-2);
+  border-radius: 9px;
+  padding-left: 24px;
+  padding-right: 24px;
 }
 
 .btn-link {
