--- a/src/styles/global/_debug.scss
+++ b/src/styles/global/_debug.scss
@@ -1,6 +1,6 @@
-* {
-  outline: solid 1px rgba(255, 000, 000, 0.05);
-}
+// * {
+//   outline: solid 1px rgba(255, 000, 000, 0.05);
+// }
 
 #ui__debug {
   height: 80%;
